fix css collapse page product

--- a/src/styles/Logement.css
+++ b/src/styles/Logement.css
@@ -122,6 +122,8 @@
     }
     .logement-div-collapse {
         width: 100%;
+        margin-left: 0;
+        margin-right: 0;
     }
     .collapseLogement {
         display: block;
